Step 3 - Install Telerik for Blazor and get the data to display in a grid component

--- a/COVID.Tests/COVID.Tests.csproj
+++ b/COVID.Tests/COVID.Tests.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\COVID.ApiClient\COVID.ApiClient.csproj" />
+    <ProjectReference Include="..\COVID.Web\COVID.Web.csproj" />
   </ItemGroup>
 
   <ItemGroup>
